--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
   </style>
 </head>
 <body>
-  <h1>Ramya Bhaskar</h1>
+<!--   <h1>Ramya Bhaskar</h1> -->
   <p>Welcome to my homepage.</p>
 
   <hr />
