--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
   <p>
     <a href="https://scholar.google.com/citations?user=ZWip71kAAAAJ&hl=en" target="_blank">Google Scholar</a><br />
     <a href="https://orcid.org/0000-0003-2148-2590" target="_blank">orcid id: 0000-0003-2148-2590</a><br />
-    <a href="https://github.com/BamyaRhaskar" target="_blank">GitHub</a><br />
+    <a href="https://github.com/ramya-bhaskar" target="_blank">GitHub</a><br />
     <a href="https://inspirehep.net/authors/2572066" target="_blank">inspire</a><br />
     <a href="https://www.researchgate.net/profile/Ramya-Bhaskar" target="_blank">Research Gate</a><br />    
 <!--     <hr /> -->
